--- a/01/01.html
+++ b/01/01.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <h1>Connected</h1>
-    <script src="index.js"></script>
+
+    <script src="01.js"></script>
 </body>
 
 </html>
