--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Beta | HyphenSaad</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- external fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Connected</h1>
+    <div id="main-header">
+        <span class="js-logo">JS</span>
+        <span class="beta">Beta</span>
+    </div>
     <script src="index.js"></script>
 </body>
 
