--- a/02/02.html
+++ b/02/02.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Beta | HyphenSaad</title>
+    <link rel="stylesheet" href="02.css">
+    <!-- to link font awesome -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body id="main">
     <div id="app"></div>
-    <script src="01.js"></script>
+    <script src="02.js"></script>
 </body>
 
 </html>
