--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <span class="js-logo">JS</span>
         <span class="beta">Beta</span>
     </div>
-    <a href="01/01.html">Day One</a>
+    <a href="02/02.html">Bad Try On TODO List</a>
     <script src="index.js"></script>
 </body>
 
