--- a/index.html
+++ b/index.html
@@ -3,20 +3,313 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Beta | HyphenSaad</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- external fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed&display=swap" rel="stylesheet">
+    <title>GPA Calculator | HyphenSaad</title>
+    <link href="https://fonts.googleapis.com/css?family=Barlow:400,400i,500" rel="stylesheet">
+    <style>
+:root {
+    --course-width: 800px;
+    --course-title-width: 60%;
+    --course-grade-width: 15%;
+    --course-credit-hours-width: 25%;
+    --course-remove-button-width: 20%;
+    --course-background-color: rgb(255, 255, 255);
+    --course-foreground-color-unfocused: rgb(128, 128, 128);
+    --course-foreground-color-focused: rgb(17, 17, 17);
+    --font-size: 62.5%;
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+html {
+    font-size: var(--font-size);
+    font-family: "Barlow", sans-serif;
+}
+
+*::selection{
+    background-color: var(--course-foreground-color-focused);
+    color: var(--course-background-color);
+}
+
+#main-container {
+    width: var(--course-width);
+    margin: auto;
+    box-shadow: 0px 0px 1.5rem 0.5rem #ececec;
+}
+
+.semester {
+    position: relative;
+    background-color: #ffffff;
+    border-radius: 1.75rem 1.75rem 0rem 0rem;
+    padding: 0.25rem;
+}
+
+#semester-title {
+    position: relative;
+    display: inline;
+    font-size: 3rem;
+    top: 0.75rem;
+    padding: 1.75rem;
+}
+
+.remove-semester-button {
+    position: absolute;
+    right: 2rem;
+    top: 1.5rem;
+    width: 4rem;
+    height: 4rem;
+    font-size: 2.75rem;
+    line-height: 4rem;
+    background-color: var(--course-background-color);
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+
+.semester-courses {
+    margin-top: 1.75rem;
+}
+
+.semester-end{
+    position: relative;
+    width: 100%;
+    /* background-color: red; */
+    height: 5rem;
+}
+
+.semester-result{
+    display: inline;
+    position: relative;
+    font-size: 2.5rem;
+    left: 1.75rem;
+    line-height: 4rem;
+}
+
+.semester-result>span{
+    font-weight: 400;
+}
+
+.add-course-button{
+    padding: 0.75rem 1rem;
+    text-transform: uppercase;
+    font-size: 1.75rem;
+    background-color: var(--course-foreground-color-focused);
+    color: var(--course-background-color);
+    outline: none;
+    border: none;
+    float: right;
+    position: relative;
+    top: 0.25rem;
+    right: 1.55rem;
+    cursor: pointer;
+}
+
+.course {
+    display: flex;
+    margin: 0rem 0.75rem;
+    padding: 0.8rem;
+    justify-content: center;
+    list-style: none;
+}
+
+.course:last-child {
+    margin-bottom: 1rem;
+}
+
+.course-title,
+.course-grade,
+.course-credit-hours,
+.remove-course-button {
+    font-size: 1.8rem;
+    padding: 0.8rem;
+    outline: none;
+    line-height: 2.5rem;
+    color: var(--course-foreground-color-unfocused);
+    border: 0.125rem solid var(--course-foreground-color-focused);
+}
+
+.course-title::placeholder,
+.course-credit-hours::placeholder {
+    color: var(--course-foreground-color-unfocused);
+}
+
+
+.course-title:focus,
+.course-credit-hours:focus {
+    color: var(--course-foreground-color-focused);
+    border-style: solid;
+}
+
+.course-title {
+    width: var(--course-title-width);
+}
+
+.course-grade {
+    border-right: 0rem;
+    border-left-width: 0rem;
+    width: var(--course-grade-width);
+    cursor: pointer;
+}
+
+.course-grade option:nth-child(odd) {
+    background-color: var(--course-background-color);
+}
+
+.course-credit-hours {
+    width: var(--course-credit-hours-width);
+}
+
+.remove-course-button {
+    position: relative;
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: 500;
+    line-height: 2.5rem;
+    padding: 1rem;
+    width: var(--course-remove-button-width);
+    background-color: var(--course-foreground-color-focused);
+    color: white;
+    cursor: pointer;
+}
+
+.break {
+    content: '';
+    width: 0.8rem;
+    background-color: white;
+    border: solid var(--course-foreground-color-focused);
+    border-width: 0.125rem 0rem 0.125rem 0rem;
+}
+
+@media screen and (max-width: 820px) {
+     :root {
+        --course-width: 100%;
+        --course-title-width: 60%;
+        --course-grade-width: 20%;
+        --course-credit-hours-width: 20%;
+        --course-remove-button-width: 20%;
+        --font-size: 55%;
+    }
+}
+
+@media screen and (max-width: 650px) {
+     :root {
+        --course-title-width: 100%;
+        --course-grade-width: calc(30% - 0.8rem);
+        --course-credit-hours-width: 35%;
+        --course-remove-button-width: 35%;
+        --font-size: 47.5%;
+        /* before it was 45% */
+    }
+    .course {
+        flex-wrap: wrap;
+    }
+    .course-grade,
+    .course-credit-hours,
+    .remove-course-button {
+        border-top: 0rem;
+    }
+    .course-grade {
+        border-left-width: 0.125rem;
+    }
+    .break {
+        border-top-width: 0;
+    }
+    .course-title{
+        padding-left: 1.25rem;
+    }
+}
+</style>
 </head>
 
 <body>
-    <div id="main-header">
-        <span class="js-logo">JS</span>
-        <span class="beta">Beta</span>
-    </div>
-    <h2><a href="beta/index.html">Beta</a></h2>
-    <script src="index.js"></script>
+    <div id="main-container"></div>
+
+    <script>
+let GradePoints = ['4.00', '3.75', '3.50', '3.00', '2.50', '2.00', '1.50', '1.00', '0.00']
+let Grades = ['A', 'A-', 'B+', 'B', 'C', 'C+', 'D', 'D+', 'F']
+
+let SemesterPoints = 0
+let SemesterCredits = 0
+
+let ID = 0;
+let SemesterCount = 0;
+
+function RemoveCourse(Semester, ID) {
+    document.getElementById(`${ID}`).remove()
+    CalculateSGPA(`${Semester}`)
+    if (document.getElementsByClassName('semester')[Semester - 1].children[2].childElementCount < 2) { RemoveSemester(Semester) }
+}
+
+function CreateCourse(semester) {
+    let item = CreateElement('li', { class: "course", id: `${ID}` })
+    item.appendChild(CreateElement('input', { class: "course-title", type: "text", placeholder: "Course Title", }))
+    let select = CreateElement('select', { class: "course-grade", oninput: `CalculateSGPA(${semester})`, })
+    select.appendChild(CreateElement('option', { selected: "selected", hidden: "hidden", disabled: "disabled", }, "Grade"))
+    for (let i = 0; i < GradePoints.length; ++i) { select.appendChild(CreateElement('option', { value: GradePoints[i], }, Grades[i])); }
+    item.appendChild(select);
+    item.appendChild(CreateElement('span', { class: "break", }))
+    item.appendChild(CreateElement('input', { class: "course-credit-hours", type: "number", placeholder: "Credit Hours", min: "1", oninput: `CalculateSGPA(${semester})`, }))
+    item.appendChild(CreateElement('button', { class: "remove-course-button", onclick: `RemoveCourse(${semester},${ID})`, }, "Remove  \u2716"))
+    document.getElementById(`sem-${semester}`).insertAdjacentElement('afterbegin', item)
+    ID++
+}
+
+function RemoveSemester(Semester) {
+    document.getElementById(`sem-${Semester}`).parentNode.remove()
+    ReNumberSemesters()
+}
+
+function CreateSemester() {
+    let item = CreateElement('div', { class: "semester", })
+    item.appendChild(CreateElement('h1', { id: "semester-title", }, `Semester ${++SemesterCount < 9 ? "0" + SemesterCount : SemesterCount}`))
+    item.appendChild(CreateElement('button', { class: "remove-semester-button", onclick: `RemoveSemester(${SemesterCount})` }, '\u2716'))
+    let Semester = CreateElement('ul', { class: "semester-courses", id: `sem-${SemesterCount}` })
+    let SemesterEnd = CreateElement('div', { class: "semester-end" })
+    let Result = CreateElement('h3', { class: "semester-result", }, "SGPA: ")
+    Result.appendChild(CreateElement('span', {}, "0.00"))
+    SemesterEnd.appendChild(Result)
+    SemesterEnd.appendChild(CreateElement('button', { class: "add-course-button", onclick: `CreateCourse(${SemesterCount})` }, "Add Course"))
+    Semester.appendChild(SemesterEnd)
+    item.appendChild(Semester)
+    document.getElementById("main-container").appendChild(item)
+    for (let i = 0; i < 5; ++i) { CreateCourse(SemesterCount) }
+}
+
+
+function CreateElement(element, attributes, content = '') {
+    let e = document.createElement(element)
+    for (let key in attributes) { e.setAttribute(key, attributes[key]) }
+    e.innerText = content
+    return e
+}
+
+function ReNumberSemesters() {
+    SemesterCount = 0
+    let Semsesters = document.getElementsByClassName('semester')
+    for (let i = 0; i < Semsesters.length; ++i) { Semsesters[i].children[0].innerText = `Semester ${++SemesterCount < 9 ? "0" + SemesterCount : SemesterCount}` }
+}
+
+function CalculateSGPA(e) {
+    console.log(e)
+    let Course = document.getElementsByClassName('semester')[e - 1].children[2].children, X = 0, Y = 0
+    for (let i = 0; i < Course.length - 1; ++i) {
+        let Points = parseInt(Course[i].children[1].value) // Points
+        let Credits = parseInt(Course[i].children[3].value) // Credit Hours
+        X += ((isNaN(Points) ? 0 : Points) * (isNaN(Credits) ? 0 : Credits))
+        Y += isNaN(Credits) ? 0 : Credits
+    }
+    let GPA = X / Y;
+    document.getElementsByClassName('semester-result')[e - 1].children[0].innerText = (isNaN(GPA) ? 0 : GPA).toFixed(2);
+}
+
+CreateSemester()
+CreateSemester()
+    </script>
 </body>
 
 </html>
