--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>GPA Calculator | HyphenSaad</title>
     <link href="https://fonts.googleapis.com/css?family=Barlow:400,400i,500" rel="stylesheet">
     <style>
+        option{
+    background-color: red;
+}
 :root {
     --course-width: 800px;
     --course-title-width: 60%;
