--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>GPA Calculator | HyphenSaad</title>
     <link href="https://fonts.googleapis.com/css?family=Barlow:400,400i,500" rel="stylesheet">
     <style>
-        option{
-    background-color: red;
+select{
+    background-color: white;
 }
+
 :root {
     --course-width: 800px;
     --course-title-width: 60%;
