--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     <title>GPA Calculator | HyphenSaad</title>
     <link href="https://fonts.googleapis.com/css?family=Barlow:400,400i,500" rel="stylesheet">
     <style>
-select{
-    background-color: white;
-}
-
 :root {
     --course-width: 800px;
     --course-title-width: 60%;
@@ -28,6 +24,8 @@ select{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    outline: none;
+    border: none;
 }
 
 html {
@@ -35,12 +33,12 @@ html {
     font-family: "Barlow", sans-serif;
 }
 
-*::selection{
+*::selection {
     background-color: var(--course-foreground-color-focused);
     color: var(--course-background-color);
 }
 
-#main-container {
+.container {
     width: var(--course-width);
     margin: auto;
     box-shadow: 0px 0px 1.5rem 0.5rem #ececec;
@@ -70,8 +68,6 @@ html {
     font-size: 2.75rem;
     line-height: 4rem;
     background-color: var(--course-background-color);
-    outline: none;
-    border: none;
     cursor: pointer;
 }
 
@@ -79,14 +75,13 @@ html {
     margin-top: 1.75rem;
 }
 
-.semester-end{
+.semester-end {
     position: relative;
     width: 100%;
-    /* background-color: red; */
     height: 5rem;
 }
 
-.semester-result{
+.semester-result {
     display: inline;
     position: relative;
     font-size: 2.5rem;
@@ -94,18 +89,16 @@ html {
     line-height: 4rem;
 }
 
-.semester-result>span{
+.semester-result>span {
     font-weight: 400;
 }
 
-.add-course-button{
+.add-course-button {
     padding: 0.75rem 1rem;
     text-transform: uppercase;
     font-size: 1.75rem;
     background-color: var(--course-foreground-color-focused);
     color: var(--course-background-color);
-    outline: none;
-    border: none;
     float: right;
     position: relative;
     top: 0.25rem;
@@ -125,26 +118,19 @@ html {
     margin-bottom: 1rem;
 }
 
-.course-title,
-.course-grade,
-.course-credit-hours,
-.remove-course-button {
+.course-title, .course-grade, .course-credit-hours, .remove-course-button {
     font-size: 1.8rem;
     padding: 0.8rem;
-    outline: none;
     line-height: 2.5rem;
     color: var(--course-foreground-color-unfocused);
     border: 0.125rem solid var(--course-foreground-color-focused);
 }
 
-.course-title::placeholder,
-.course-credit-hours::placeholder {
+.course-title::placeholder, .course-credit-hours::placeholder {
     color: var(--course-foreground-color-unfocused);
 }
 
-
-.course-title:focus,
-.course-credit-hours:focus {
+.course-title:focus, .course-credit-hours:focus {
     color: var(--course-foreground-color-focused);
     border-style: solid;
 }
@@ -159,11 +145,11 @@ html {
     width: var(--course-grade-width);
     cursor: pointer;
 }
-/*
-.course-grade option:nth-child(odd) {
-    background-color: var(--course-background-color);
+
+select {
+    background-color: white;
 }
-*/
+
 .course-credit-hours {
     width: var(--course-credit-hours-width);
 }
@@ -189,8 +175,81 @@ html {
     border-width: 0.125rem 0rem 0.125rem 0rem;
 }
 
+/* PROGRESS BAR */
+
+.base {
+    transform: rotate(-225deg);
+    transform-origin: 50% 50%;
+    fill: transparent;
+}
+
+.x-bar {
+    stroke: #e4e4e4;
+    stroke-width: 2rem;
+}
+
+.y-bar {
+    stroke: tomato;
+    stroke-width: 2rem;
+    transition: stroke-dashoffset 1s ease-in;
+}
+
+.z-bar {
+    stroke: white;
+    stroke-width: 2.5rem;
+    transform: rotate(-315deg);
+}
+
+.result-container {
+    background-color: white;
+    position: relative;
+    height: 8rem;
+    top: 8rem;
+    margin-bottom: 18rem;
+}
+
+#progress-bar {
+    position: absolute;
+    background-color: white;
+    border-radius: 14rem;
+    box-sizing: content-box;
+    border: 2rem solid white;
+    transform: scale(0.75);
+    right: 0rem;
+    top: -9rem;
+    box-shadow: 0px 0px 1.5rem 0.5rem #dadada;
+}
+
+.add-semester-button {
+    position: relative;
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: 500;
+    line-height: 2.5rem;
+    padding: 1rem;
+    width: calc(var(--course-remove-button-width) + 2.25rem);
+    background-color: var(--course-foreground-color-focused);
+    color: white;
+    cursor: pointer;
+    text-transform: uppercase;
+    left: 1.75rem;
+    top: 1.75rem;
+}
+
+.CGPA-min, .CGPA-max {
+    font-size: 2rem;
+}
+
+.CGPA-earned {
+    font-size: 6.75rem;
+}
+
+.CGPA-description {
+    font-size: 2.25rem;
+}
+
 @media screen and (max-width: 820px) {
-     :root {
+    :root {
         --course-width: 100%;
         --course-title-width: 60%;
         --course-grade-width: 20%;
@@ -198,10 +257,31 @@ html {
         --course-remove-button-width: 20%;
         --font-size: 55%;
     }
+    #semester-title {
+        padding: 1rem 1.75rem;
+    }
+    .remove-semester-button {
+        top: 1.25rem;
+    }
+    .result-container {
+        margin-bottom: 22rem;
+    }
+    #progress-bar {
+        border-radius: 16rem;
+    }
+    .CGPA-min, .CGPA-max {
+        font-size: 2.25rem;
+    }
+    .CGPA-earned {
+        font-size: 7rem;
+    }
+    .CGPA-description {
+        font-size: 2.5rem;
+    }
 }
 
 @media screen and (max-width: 650px) {
-     :root {
+    :root {
         --course-title-width: 100%;
         --course-grade-width: calc(30% - 0.8rem);
         --course-credit-hours-width: 35%;
@@ -209,12 +289,19 @@ html {
         --font-size: 47.5%;
         /* before it was 45% */
     }
+    #main-container {
+        box-shadow: none;
+    }
+    #semester-title {
+        padding: 0.5rem 1.75rem;
+    }
+    .remove-semester-button {
+        top: 1rem;
+    }
     .course {
         flex-wrap: wrap;
     }
-    .course-grade,
-    .course-credit-hours,
-    .remove-course-button {
+    .course-grade, .course-credit-hours, .remove-course-button {
         border-top: 0rem;
     }
     .course-grade {
@@ -223,22 +310,57 @@ html {
     .break {
         border-top-width: 0;
     }
-    .course-title{
+    .course-title {
         padding-left: 1.25rem;
+    }
+    .result-container {
+        margin-bottom: 19rem;
+    }
+    #progress-bar {
+        border-radius: 20rem;
+        border: 2.5rem solid white;
+        transform: scale(0.6);
+        right: -4rem;
+        top: -14rem;
+    }
+    .x-bar, .y-bar {
+        stroke-width: 4rem;
+    }
+    .z-bar {
+        stroke-width: 4.1rem;
+    }
+    .CGPA-min, .CGPA-max {
+        font-size: 2.75rem;
+    }
+    .CGPA-earned {
+        font-size: 8.25rem;
+    }
+    .CGPA-description {
+        font-size: 2.75rem;
     }
 }
 </style>
 </head>
 
 <body>
-    <div id="main-container"></div>
-
+    <div id="main-container" class="container"></div>
+    <div class="result-container container">
+        <button class="add-semester-button" onclick="CreateSemester()">Add Semester</button>
+        <svg id="progress-bar" width="240" height="240">
+            <circle class="x-bar base" r="110" cx="120" cy="120" />
+            <circle class="y-bar base" r="110" cx="120" cy="120" />
+            <circle class="z-bar base" r="110" cx="120" cy="120" />
+            <text class="CGPA-min" x="50" y="215">0.00</text>
+            <text class="CGPA-max" x="150" y="215">4.00</text>
+            <text class="CGPA-earned" x="60" y="120">0.00</text>
+            <text class="CGPA-description" x="45" y="155">Cumulative GPA</text>
+        </svg>
+    </div>
     <script>
 let GradePoints = ['4.00', '3.75', '3.50', '3.00', '2.50', '2.00', '1.50', '1.00', '0.00']
 let Grades = ['A', 'A-', 'B+', 'B', 'C', 'C+', 'D', 'D+', 'F']
 
-let SemesterPoints = 0
-let SemesterCredits = 0
+let Semester = {}
 
 let ID = 0;
 let SemesterCount = 0;
@@ -263,9 +385,10 @@ function CreateCourse(semester) {
     ID++
 }
 
-function RemoveSemester(Semester) {
-    document.getElementById(`sem-${Semester}`).parentNode.remove()
+function RemoveSemester(Sem) {
+    document.getElementById(`sem-${Sem}`).parentNode.remove()
     ReNumberSemesters()
+    delete Semester[Sem]
 }
 
 function CreateSemester() {
@@ -282,6 +405,7 @@ function CreateSemester() {
     item.appendChild(Semester)
     document.getElementById("main-container").appendChild(item)
     for (let i = 0; i < 5; ++i) { CreateCourse(SemesterCount) }
+    UpdateProgress()
 }
 
 
@@ -299,21 +423,45 @@ function ReNumberSemesters() {
 }
 
 function CalculateSGPA(e) {
-    console.log(e)
     let Course = document.getElementsByClassName('semester')[e - 1].children[2].children, X = 0, Y = 0
     for (let i = 0; i < Course.length - 1; ++i) {
         let Points = parseInt(Course[i].children[1].value) // Points
         let Credits = parseInt(Course[i].children[3].value) // Credit Hours
         X += ((isNaN(Points) ? 0 : Points) * (isNaN(Credits) ? 0 : Credits))
         Y += isNaN(Credits) ? 0 : Credits
+
     }
     let GPA = X / Y;
+    Semester[e] = { Points: X, Credits: Y }
     document.getElementsByClassName('semester-result')[e - 1].children[0].innerText = (isNaN(GPA) ? 0 : GPA).toFixed(2);
+
+    let A = 0, B = 0
+    for (key in Semester) {
+        A += Semester[key].Points
+        B += Semester[key].Credits
+    }
+    C = A / B
+    UpdateProgress(isNaN(C) ? 0 : C)
 }
 
 CreateSemester()
-CreateSemester()
-    </script>
+
+function UpdateProgress(CGPA = 0) {
+    function SetProgressBar(e, percent) {
+        let circle = document.getElementsByClassName(e)[0];
+        let radius = circle.r.baseVal.value;
+        let circumference = radius * 2 * Math.PI;
+        circle.style.strokeDasharray = `${circumference} ${circumference}`;
+        circle.style.strokeDashoffset = circumference - percent / 100 * circumference;
+    }
+
+    SetProgressBar('x-bar', 75);
+    SetProgressBar('y-bar', CGPA * 18.75);
+    SetProgressBar('z-bar', 25);
+
+    document.getElementsByClassName('CGPA-earned')[0].innerHTML = CGPA.toFixed(2)
+}
+</script>
 </body>
 
 </html>
